--- a/web/web_scanner/src/App.module.css
+++ b/web/web_scanner/src/App.module.css
@@ -7,6 +7,13 @@
     padding: 3px;
 }
 
-div.channelsConfigList {
+div.activeChannelList {
+    margin: 10px;
+    padding: 0;
+    width: 410px; /* sum of channelLabelContainer + channelRssiContainer */
+}
 
+div.channelsConfigList {
+    margin: 10px;
+    padding: 0;
 }
