--- a/web/web_scanner/src/Channel.module.css
+++ b/web/web_scanner/src/Channel.module.css
@@ -18,7 +18,7 @@ div.activeChannel .topLineContainer {
 }
 
 .activeChannel .channelLabelContainer {
-    width: 200px;
+    width: 250px;
     margin: 3px;
 }
 
@@ -66,6 +66,10 @@ p.statusBox {
     box-sizing: border-box;
 }
 
+.statusBoxLarge {
+    width: auto;
+}
+
 .holdActive {
     background-color: #f1c40f;
 }
@@ -80,4 +84,96 @@ p.statusBox {
 
 .disableActive {
     background-color: #e74c3c;
+}
+
+/* Config */
+
+.channelConfig {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    text-align: left;
+
+    margin: 3px;
+}
+
+div.showBorder {
+    border: 2px solid black;
+}
+
+.channelConfigHeader {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    text-align: left;
+
+    font-size: large;
+    font-weight: bold;
+
+    border-bottom: 3px solid black;
+}
+
+div.channelConfigLabel {
+    width: 200px;
+    font-weight: bold;
+}
+
+div.channelConfigFreq {
+    width: 100px;
+}
+
+div.channelConfigMode {
+    width: 100px;
+}
+
+div.channelConfigStatus {
+    width: 100px;
+}
+
+div.channelConfigDetails {
+    text-align: left;
+}
+
+div.channelConfigControls {
+    /* border: 2px solid black; */
+
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding: 3px;
+    gap: 5px;
+}
+
+div.forceActive {
+    width: 18px;
+    height: 18px;
+    background: black;
+    clip-path: polygon(0% 0%, 0% 100%, 100% 50%);
+}
+
+/*    Pause Icon    */
+
+.pauseIcon {
+  width: 16px;
+  height: 16px;
+  position: relative;
+  /* cursor: pointer; */
+}
+
+.pauseIcon::before,
+.pauseIcon::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  width: 30%;
+  height: 100%;
+  background-color: #000;
+}
+
+.pauseIcon::before {
+  left: 0;
+}
+
+.pauseIcon::after {
+  right: 0;
 }
