--- a/web/web_scanner/src/Channel.module.css
+++ b/web/web_scanner/src/Channel.module.css
@@ -3,7 +3,7 @@
 }
 
 div.activeChannel {
-    border: 4px solid black;
+    border: 4px solid #555;
     border-style: solid;
     margin-bottom: 5px;
 
@@ -20,11 +20,15 @@ div.activeChannel .topLineContainer {
 .activeChannel .channelLabelContainer {
     width: 250px;
     margin: 3px;
+
+    color: black;
 }
 
 .activeChannel .channelRssiContainer {
     margin: 5px;
     width: 160px;
+
+    color: black;
 }
 
 .activeChannel .channelLabel {
@@ -45,8 +49,8 @@ div.activeChannel .topLineContainer {
     height: 30px;
     
     /* Add a background color and border for visibility */
-    background-color: #f0f0f0;
-    border: 3px solid #333;
+    background-color: #2a2a2a;
+    border: 3px solid #555;
 
     /* Use Flexbox for centering content */
     display: flex;
@@ -71,11 +75,11 @@ p.statusBox {
 }
 
 .holdActive {
-    background-color: #f1c40f;
+    background-color: #D5B60A;
 }
 
 .soloActive {
-    background-color: #f1c40f;
+    background-color: #D5B60A;
 }
 
 .muteActive {
@@ -95,10 +99,11 @@ p.statusBox {
     text-align: left;
 
     margin: 3px;
+    color: black;
 }
 
 div.showBorder {
-    border: 2px solid black;
+    border: 2px solid #555;
 }
 
 .channelConfigHeader {
@@ -110,7 +115,7 @@ div.showBorder {
     font-size: large;
     font-weight: bold;
 
-    border-bottom: 3px solid black;
+    border-bottom: 3px solid #555;
 }
 
 div.channelConfigLabel {
@@ -132,6 +137,7 @@ div.channelConfigStatus {
 
 div.channelConfigDetails {
     text-align: left;
+    color: black;
 }
 
 div.channelConfigControls {
@@ -142,12 +148,13 @@ div.channelConfigControls {
     align-items: center;
     padding: 3px;
     gap: 5px;
+    color: #e0e0e0;
 }
 
 div.forceActive {
     width: 18px;
     height: 18px;
-    background: black;
+    background: #e0e0e0;
     clip-path: polygon(0% 0%, 0% 100%, 100% 50%);
 }
 
@@ -167,7 +174,7 @@ div.forceActive {
   top: 0;
   width: 30%;
   height: 100%;
-  background-color: #000;
+  background-color: #e0e0e0;
 }
 
 .pauseIcon::before {
